Update cover images to be smaller memory size, fix navbar collapse bug

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,7 +11,7 @@ img {
 
 
 #cover {
-  background: #222 url('https://s3-us-west-2.amazonaws.com/warner-profile-app/images/MilkyWay.jpg') center center no-repeat;
+  background: #222 url('https://s3-us-west-2.amazonaws.com/warner-profile-app/images/milkyway.jpeg') center center no-repeat;
   background-size: cover;
   color: white;
   height: 100%;
@@ -29,7 +29,7 @@ width: 100%;
 }
 
 #about {
-  background: url('https://s3-us-west-2.amazonaws.com/warner-profile-app/images/outdoors.jpg') center center no-repeat;
+  background: url('https://s3-us-west-2.amazonaws.com/warner-profile-app/images/outdoors.jpeg') center center no-repeat;
   background-size: cover;
   height: 100%;
   width: 100%;
@@ -70,7 +70,7 @@ width: 100%;
 }
 
 #resume {
-  background: url('https://s3-us-west-2.amazonaws.com/warner-profile-app/images/computer-on-desk.jpg') center center no-repeat;
+  background: url('https://s3-us-west-2.amazonaws.com/warner-profile-app/images/computer-on-desk.jpeg') center center no-repeat;
   background-size: cover;
   height: 120%;
   width: 100%;
